--- a/veni.html
+++ b/veni.html
@@ -155,7 +155,23 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
 <h4 style="text-align:right"><em>Demo: <a href=”https://www.favsync.com”>https://www.favsync.com</a></em></h4>
 
           </div>
-          
+           <div id="learner" name="learner" class="block">      
+          <h3><b>Learner Journey Navigation System 
+<b></h3>
+<p><h3><i>Wilbert Kraan, Jan Lasocki-Biczysko, Charles Duncan, Chris Chung, Joseph Chapman, Joe Wilson and Peter Winstanley
+
+</i></h3></p>
+<p><h3> CETIS, Intrallect ltd., JES and Co, Scottish Qualification Authority, Scottish Government
+<br />Edinburgh, Scotland; Glasgow, Scotland; Tucson, USA
+</h3></p>
+<p><h3> Currently, the Learner Journey Navigation System is a linked data mash-up that illustrates how a learner can be helped to find her way through learning opportunities and resources when outcomes are published as URIs.
+The mash-up takes Scotland's Curriculum for Excellence (CfE) and publishes it via the Achievement Standards Network (ASN) linked data platform. With this infrastructure, it is possible to compare a learner's interests and achievements, as recorded in an e-portfolio, with the curriculum data in the ASN in order to suggest career goals, as well as learning pathways to reaching them. Scottish Qualification Authority college data is used to suggest relevant courses nearby. A query in the Intralibrary digital content repository suggests relevant learning resources, while a controlled query in a social network suggests people who are or have been on similar journeys. <h3></p><p><h3>
+With further development, the underlying linked data infrastructure could enable an unlimited number of other apps via generic web APIs provided by the ASN. Nor is the infrastructure limited to school curriculae. Other competency structures can also be URI-ified and used to support the "Teaching going social", "Educationizer", and "Supporting employees‚ development via didactic guidance through learning materials" LinkedUp Challenge use cases.
+<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="https://github.com/wilmTap/datajam">https://github.com/wilmTap/datajam</a></em></h4>
+
+</div>       
              <div id="weshare" name="weshare" class="block">
 <h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-Pérez, Eduardo Gómez-Sánchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
