--- a/veni.html
+++ b/veni.html
@@ -171,7 +171,18 @@ With further development, the underlying linked data infrastructure could enable
 
 <h4 style="text-align:right"><em>Demo: <a href="https://github.com/wilmTap/datajam">https://github.com/wilmTap/datajam</a></em></h4>
 
-</div>       
+</div>  
+
+  <div id="neurocloud" name="neurocloud" class="block">
+
+<h3><b>Neuro-Cloud Free Textbook Project<b></h3>
+<p><h3><i>Andrew L Varnell, Don C Cooper and Neuro-Cloud Contributors</i></h3></p>
+<p><h3>Neuro-Cloud Publishing, Boulder Colorado, USA</h3></p>
+<p><h3>We believe that anyone who wants to learn the fundamentals of neuroscience should have the opportunity to do so. As a result, we have decided to create an open-access, free forever textbook. This textbook is to be provided in three different formats: A downloadable app from the IOS and android market, a downloadable .pdf, and a physical copy that can be ordered at cost.
+<h3></p><p><h3>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page">http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page</a></em></h4>
+</div>
              <div id="weshare" name="weshare" class="block">
 <h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-Pérez, Eduardo Gómez-Sánchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
