--- a/veni.html
+++ b/veni.html
@@ -326,6 +326,17 @@ Its SPARQL endpoint can be accessed at: <a href=”http://seek.rkbexplorer.com/s
 
 </div>
 
+<div id="wikipedia" name="wikipedia" class="block">
+ 
+<h3><b>WIkipedia data linker<b></h3>
+<p><h3><i>Rajendra Sharma, Utshab Bhetuwal and Rajesh Khadka</i></h3></p>
+<p><h3>Amrit science campus, Nepal</h3></p>
+<p><h3>We have created a wikipedia search engine like application ,under which user can select category present within our system and fetch the results via wikipedia . WIkipedia will broadly categorize the subjects and present it which in turn can be used to view the detailed information related to the topic. <h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http:// www.bhetus.com/eduproject">http:// www.bhetus.com/eduproject</a></em></h4>
+</div>
+
+
 
 <div id="yourhistory" name="yourhistory" class="block">
 
