--- a/veni.html
+++ b/veni.html
@@ -314,6 +314,20 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 <h4 style="text-align:right"><em>Demo: <a href="http://sociallearn.cs.surrey.ac.uk">http://sociallearn.cs.surrey.ac.uk</a></em></h4>
 </div>
 
+<div id="sugestme" name="sugestme" class="block">
+ 
+<h3><b>Suggest me content for further reading and learning 
+<b></h3>
+<p><h3><i>Vincent Michel, Arthur Lutz and Adrien Di Mascio
+</i></h3></p>
+<p><h3>Logilab, Paris, France</h3></p>
+<p><h3>A student submits a text and the site suggests some courses, information, books, photos and videos related to it based, among others, on corpus by the French National Library and DBPedia (based on Wikipedia).
+<h3></p>
+<h4 style="text-align:right"><em>Demo: <a href=" http://demo.cubicweb.org/suggest-content-for-further-reading/">http://demo.cubicweb.org/suggest-content-for-further-reading/</a></em></h4>
+ 
+</div>
+
+
  <div id="weshare" name="weshare" class="block">
 <h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-Pérez, Eduardo Gómez-Sánchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
