--- a/veni.html
+++ b/veni.html
@@ -275,6 +275,21 @@ Our proposal consists of building a Museums Micro Cloud of Linked, Clean and Cur
 <h4 style="text-align:right"><em>Demo: <a href="http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page">http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page</a></em></h4>
 </div>
 
+<div id="onemillion" name="onemillion" class="block">
+ 
+<h3><b>One Million Museum Moments<b></h3>
+<p><h3><i> Suzanne Sarraf and Herminia Din</i></h3></p>
+<p><h3> National Gallery of Art, University of Alaska, Washington, DC, USA
+</h3></p>
+<p><h3>OneMillionMuseumMoments.org is a project created by Herminia Din and Suzanne Sarraf designed to invite museumgoers and museum professionals to share their own museum moments/experiences. 
+<br />What is a museum moment?<br />
+A Museum Moment happens when you are moved, touched, informed, awed, shocked, puzzled, confused, excited, transported, inspired, or enlightened during a museum visit. As the first online collection of its kind, we hope it will showcase the role of all type of museums in our community.
+<h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://onemillionmuseummoments.org">http://onemillionmuseummoments.org </a></em></h4>
+</div>
+
+
  <div id="polimedia" name="polimedia" class="block">
           
           <h3><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates<b></h3>
