--- a/veni.html
+++ b/veni.html
@@ -275,6 +275,16 @@ Our proposal consists of building a Museums Micro Cloud of Linked, Clean and Cur
 <h4 style="text-align:right"><em>Demo: <a href="http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page">http://neuro-cloud.net/TextbookWiki/index.php?title=Main_Page</a></em></h4>
 </div>
 
+<div id="open" name="open" class="block">
+
+ <h3><b>Open LInked Education Data<b></h3>
+<p><h3><i>Madi Solomon, Marlowe Johnson and Ira Kleinberg</i></h3></p>
+<p><h3>Pearson Higher Education, North America</h3></p>
+<p><h3>This proposal is for the establishment of an Open LInked Education Data database, a curated "Subject" vocabulary, to be offered as a community service to the education sector. This open data would be accessed freely by institutions, teachers, publishers, and students to be used for tagging educational resources. Open data and education are natural partners as knowledge and wisdom are reliant on forging conceptual relationships.<h3></p>
+
+</div>
+
+
 <div id="onemillion" name="onemillion" class="block">
  
 <h3><b>One Million Museum Moments<b></h3>
