--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
 				<li><a target="_blank" href="http://www.wis.ewi.tudelft.nl/houben/">Geert-Jan Houben</a>, TU Delft, Netherlands</li>
 				<li><a target="_blank" href="http://etsii.uah.es/doctorado/Leonardo.html">Leonardo Lezcano</a>, CELSTEC, Open University, Netherlands</li>
 				<li><a target="_blank" href="http://www.few.vu.nl/~cgueret/">Christophe Guéret</a>, Data Archiving and Networked Services (DANS), Netherlands</li>			  
-			  </ul>
+				<li><a target="_blank" href="http://okfn.org/about/team/#Jonathan_Gray_8212_Director_of_Policy_and_Ideas">Jonathan Gray</a>, Open Knowledge Foundation, United Kingdom</li>			  
+				<li><a target="_blank" href="https://adenu.ia.uned.es/web/en/members/adenu_staff_members/ocsantos">Olga C. Santos</a>, UNED, Spain</li>			  
+    			</ul>
 			  <p>Submissions which receive the highest review ratings with be invited to present at <a target="_blank" href="http://okcon.org">OKCon</a> in September, where the audience will vote for the winners.</h3></p>
 
 			  <h2>What are the reviewing criteria?</h2>
