--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         <div id="what" name="what" class="block">
             <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
 			<h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to to large-scale deployable systems.</h3>
-            <br/><br/>
+            <h3><strong>The deadline for the Veni Competition has now passed, but we will begin encouraging submissions for our next competition, Vidi, from November 2013 onwards.</strong></h3>           
+			<h3><strong>Our judges are currently creating a shortlist from the Veni Competition for judging at OKCon. We will need your help in choosing a ‘Peoples Choice’ from the submissions we have recieved. Join our low traffic <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive updates on when we will launch the voting for this category. You will also receive updates when we publish new content on the LinkedUp Project blog, where we will continue to discuss linked data, open data, and education.</strong></h3>
+			<h3><strong>Over the next few months we will also be continuing to increase the number of linked data sets in our repository. So why not so why not get a head start on the Vidi Competition and start exploring the <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">linked data sets</a> or browse the range of <a target="_blank" target="http://datahub.io/group/linked-education">open educational datasets</a> we have collated. If you have any questions, please <a href="#contact">contact us</a>.</strong></h3>
+		   <br/><br/>
 <!--		
             <p><h3>There is a wealth of useful and inspirational material on the internet that can be used in education, ranging from lecture slides, tutorials, and online courses to Wikipedia articles and YouTube videos. But how could one find and connect the resources that learners need?</h3></p>
               
@@ -110,6 +113,7 @@
               <h1>Veni Competition</h1>
 			  <br/>
 			  <p><h3><b>Deadline: 27 June 2013</b></h3></p>
+			  <p><h3><strong>The Veni Competition has now closed. However, in the Autumn 2013, we will be calling for submissions to the Vidi Competition, the second in our series of three competitions. </strong></h3></p>
               <p><h3>We’re inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes, and have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
 			  <p><h3>The idea is to mash up the vast amount of material and data on the internet that can be used in education, ranging from course data, lecture slides, and online courses to Wikipedia articles and YouTube videos. </h3></p>
 			  <p><h3>You might design a tool for combining datasets and visualising them in interesting new ways, or perhaps develop a search engine that combines search results from different libraries. Please see our <a href="usecases.html">use cases</a> if you are looking for further inspiration.</h3></p>
@@ -139,7 +143,7 @@
 			  
 			  <p><h3>You can choose between two alternatives when submitting your application. You can either submit a paper (following <a href="docs/linkedup_veni_submission_template.doc">the Word template</a>) via <a target="_blank" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">EasyChair</a>, or you fill out the <a target="_blank" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">submission form</a> which asks you to define how your prototype fits the evaluation criteria. As part of the submission, you will also be expected to write a 200 word abstract which will be published on this website after the submission deadline. The method by which you submit will not affect your chances for winning.</p></h3>
 			  <br />
-			  <p align="center"><a class="btn btn-large btn-success" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">Submit via a form</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-large btn-success" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">Submit via EasyChair</a></p>
+			  <!-- p align="center"><a class="btn btn-large btn-success" href="https://docs.google.com/a/okfn.org/forms/d/194n3XgFxyrHcsmfxCniAKyqFtAX7pzJPh9FVKxmo0I8/viewform">Submit via a form</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-large btn-success" href="https://www.easychair.org/conferences/?conf=1stlinkedupcompetition">Submit via EasyChair</a></p-->
               <br/><br/>
 			  <h3><p><ul>What happens next?
 			  <li><strong>1 September 2013</strong>: Notification of shortlist</li>
