--- a/veni.html
+++ b/veni.html
@@ -363,7 +363,7 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 <h4 style="text-align:right"><em>Demo: <a href="http://sociallearn.cs.surrey.ac.uk">http://sociallearn.cs.surrey.ac.uk</a></em></h4>
 </div>
 
-<div id="sugestme" name="sugestme" class="block">
+<div id="suggestme" name="suggestme" class="block">
  
 <h3><b>Suggest me content for further reading and learning 
 <b></h3>
