--- a/veni.html
+++ b/veni.html
@@ -182,7 +182,7 @@ We have used a sample of 30 multimedia lessons. At first stage, we parsed the in
            <div id="favsyn" name="favsyn" class="block">
               <h3><b>FavSync - Collect bookmarks together<b></h3>
 <p><h3><i>Vladi Trop, Raphael Glassberg, Peter Kollarovits</i></h3></p>
-<p><h3>FAVSYNC BVBA, Lint, Antwerp province, Begium</h3></p>
+<p><h3>FAVSYNC BVBA, Lint, Antwerp province, Belgium</h3></p>
 <p><h3>FavSync - Collect bookmarks together
 FavSync allows users to easily share and sync groups of bookmarks with other users. Very effective to collect bookmarks as a group and work a project (Imagine Dropbox, just for bookmarks).<h3></p>
 
