--- a/veni.html
+++ b/veni.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/thickbox.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
-  <title>Veni Competition Abstracts</title>
+  <title>Veni Competition Submissions</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/cufon.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
@@ -82,7 +82,7 @@
           <div class="titletext">
 		    <h1 class="title">Veni Competition</h1>
 			<br />
-			<h1>May - June 2013</h1>
+			<h1>Submissions</h1>
 			
             <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"/></a>
             <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"/></a>
