--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
 			<h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to to large-scale deployable systems.</h3>
 			<br />
-            <h3><strong>The deadline for the Veni Competition has now passed and <a href="http://linkedup-challenge.org/veni.html"></a>abstracts from the submissions are now online</a>, but we will begin encouraging submissions for our next competition, Vidi, from November 2013 onwards.</strong></h3>           
+            <h3><strong>The deadline for the Veni Competition has now passed and <a href="http://linkedup-challenge.org/veni.html">abstracts from the submissions are now online</a>, but we will begin encouraging submissions for our next competition, Vidi, from November 2013 onwards.</strong></h3>           
 			<br />
 			<h3><strong>Our judges are currently creating a shortlist from the Veni Competition for judging at OKCon. We will need your help in choosing a ‘Peoples Choice’ from the submissions we have recieved. Join our low traffic <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive updates on when we will launch the voting for this category. You will also receive updates when we publish new content on the LinkedUp Project blog, where we will continue to discuss linked data, open data, and education.</strong></h3>
 			<br />
