--- a/veni.html
+++ b/veni.html
@@ -164,7 +164,7 @@ and Eleni Dafli</i></h3></p>
 <p><h3>The game begins with a central concept, say a drug, that needs to be 'guessed' by the player. Unless the player possesses unexplained guessing potential, they have to expand the concept and reveal some of the hints related with it. The hints might either be other concepts (like a disease targeted by the drug) or a simple property of the original concept (like a brand name). The related concepts can, in turn, be expanded and soon an exciting knowledge network is developed. </h3></p>
 <p><h3><As resources are always limited, the player has to exchange some genetic material in order to reveal the hints. Nevertheless, a correct geuss is rewarded with loads of genetic material! The palyer then has to spend the genetic material in the most effective manner: reveal the least information possible to make guessing easier.<h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href=”http://dbpedia.med.auth.gr/semedic/incubator/RGraph/example1.html”>http://dbpedia.med.auth.gr/semedic/incubator/RGraph/example1.html</a> and <a href="https://bitbucket.org/larjohn/semedic">https://bitbucket.org/larjohn/semedic</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="http://dbpedia.med.auth.gr/semedic/incubator/RGraph/example1.html">http://dbpedia.med.auth.gr/semedic/incubator/RGraph/example1.html</a> and <a href="https://bitbucket.org/larjohn/semedic">https://bitbucket.org/larjohn/semedic</a></em></h4>
 </div>
 
 <div id="digitalplanet" name="digitalplanet" class="block">
