--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		
         <div id="what" name="what" class="block">
             <p><h3>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</h3><br />
-			<h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to to large-scale deployable systems.</h3>
+			<h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3>
 			<br />
             <h3><strong>The deadline for the Veni Competition has now passed and <a href="http://linkedup-challenge.org/veni.html">abstracts from the submissions are now online</a>, but we will begin encouraging submissions for our next competition, Vidi, from November 2013 onwards.</strong></h3>           
 			<br />
