--- a/veni.html
+++ b/veni.html
@@ -108,27 +108,27 @@
           <h2>Abstracts</h2>
           
 <ul><li><a href="#course">Course Finder</a></li><li>
-<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a></li><li>
+<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED</b></li><li>
 <a href="#drhoo">Dr Hoo</a></li><li>
 <a href="#digitalplanet">Enrichment of Young Digital Planet's biology lessons</a></li><li>
 <a href="#favsyn">FavSync - Collect bookmarks together</a></li><li>
-<a href="#globetown">Globe-Town: open data for sustainable development education</a></li><li>
-<a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a></li><li>
+<a href="#globetown">Globe-Town: open data for sustainable development education</a></li> <b>SHORTLISTED</b><li>
+<a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a></li> <b>SHORTLISTED</b><li>
 <a href="#learner">Learner Journey Navigation System</a></li><li>
 <a href="#mooccounselor">LinkedIn MOOCs counselor</a></li><li>
 <a href="#melod">MELOD: Mobile Environment for learning with Linked Open Data</a></li><li>
-<a href="#mismuseos">Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform</a></li><li>
+<a href="#mismuseos">Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform</a></li> <b>SHORTLISTED</b><li>
 <a href="#moocrank">moocrank: recommendation of MOOCs based on learning outcomes</a></li><li>
 <a href="#neurocloud">Neuro-Cloud Free Textbook Project</a></li><li>
 <a href="#open">Open LInked Education Data</a></li><li>
 <a href="#onemillion">One Million Museum Moments</a></li><li>
-<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a></li><li>
-<a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a></li><li>
+<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a></li> <b>SHORTLISTED</b><li>
+<a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a></li> <b>SHORTLISTED</b><li>
 <a href="#socialvle">Social VLE With Rich Structure Learning Data Using Semantic CMS</a></li><li>
 <a href="#suggestme">Suggest me content for further reading and learning</a></li><li>
-<a href="#weshare">We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data</a></li><li>
+<a href="#weshare">We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data</a></li> <b>SHORTLISTED</b><li>
 <a href="#wikipedia">WIkipedia data linker</a></li><li>
-<a href="#yourhistory">yourHistory: Personalising Historic Events</a></li></ul>
+<a href="#yourhistory">yourHistory: Personalising Historic Events</a></li> <b>SHORTLISTED</b></ul>
 
      </div><!-- .block -->      
           <div id="course" name="course" class="block">
@@ -146,7 +146,7 @@ This is the first time in Scottish history this type of information has been mad
 </div>
 
 <div id="dataconf" name="dataconf" class="block">
-<h3><b>DataConf: Enriching conference publications with a mobile mashup application<b></h3>
+<h3><b>DataConf: Enriching conference publications with a mobile mashup application - SHORTLISTED<b></h3>
 <p><h3><i>Florian Bacle, Benoît Durant de la Pastellière, Fiona Le Peutrec and Lionel Médini
 </i></h3></p>
 <p><h3>Université Claude Bernard Lyon and LIRIS laboratory (Lyon France)</h3></p>
@@ -193,7 +193,7 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
           <div id="globetown" name="globetown" class="block">
 
 
-<h3><b>Globe-Town: open data for sustainable development education<b></h3>
+<h3><b>Globe-Town: open data for sustainable development education  - SHORTLISTED<b></h3>
 <p><h3><i>Jack Townsend, Andrea Prieto-Vega, Richard Gomer, Will Fyson, Dom Hobson and Huw Fryer</i></h3></p>
 <p><h3>University of Southampton, and independent, Southampton, UK</h3></p>
 <p><h3>Globe-Town.org opens up the successes and the challenges of sustainable development around the world and what they mean for you, through a fun and informative web application built from open data. With it, you can explore the intersections, tensions and trade-offs between the 'three pillars' of sustainable development: the environment, the economy and society. In particular, Globe-Town shows how no one is isolated from the consequences of climate change in an interdependent world, and how responding to it presents a world of opportunities to inspire individuals and entrepreneurs. In order to tackle the big challenges of sustainability, people of all ages need to learn how they affect us personally and what we can do about them. Globe-Town does this by connecting the global with the local, so we can explore the risks, responsibilities and opportunities in an increasingly interconnected world. Globe-Town won a top three place at the first international #Apps4Climate competition, held by the World Bank and judged by the chair of the UNFCC, Christiana Figueres.<h3></p>
@@ -205,7 +205,7 @@ FavSync allows users to easily share and sync groups of bookmarks with other use
 <div id="knownodes" name="knownodes" class="block">
 
 
-<h3><b>Knownodes - A collaborative project to explore, create and define links between online resources and ideas<b></h3>
+<h3><b>Knownodes - A collaborative project to explore, create and define links between online resources and ideas - SHORTLISTED<b></h3>
 <p><h3><i>Dor Garbash, Mikael Couzic, Liad Magen, Jesse Himmelstein, Alexandre Lejeune, Bruno Martin, Weipeng Kuang, Raphael goujet and Yann Leflour.</i></h3></p>
 <p><h3>CRI - Centre de Recherche Interdisciplinaire, University Paris Descartes, Citizen cyberlab, Paris, France</h3></p>
 <p><h3>Knownodes is a collaborative website that enables anyone to relate, define and explore connections between web-resources and ideas. By providing the context of how resources are related, participants lower the energy barrier for understanding and collaboration around complex knowledge and concepts.
@@ -264,7 +264,7 @@ With further development, the underlying linked data infrastructure could enable
 
 <div id=" mismuseos" name="mismuseos" class="block">
  
-<h3><b>Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform<b></h3>
+<h3><b>Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform - SHORTLISTED<b></h3>
 <p><h3><i>Ricardo Alonso Maturana, María Ortega, María Elena Alvarado, Susana López-Sola and María José Ibáñez</i></h3></p>
 <p><h3>GNOSS, Spain</h3></p>
 <p><h3> Mismuseos.net shows a case of consumption and use of Linked Data from museums and their valorisation in education, through innovative end-user applications, like facet-based searches, semantic context creation and navigation through graphs, which drastically improve user experience. The search engine enables aggregated searches by different facets and summarization of results for each successive search. The solution is built on GNOSS, a semantic and social software platform. </h3></p>
@@ -326,7 +326,7 @@ A Museum Moment happens when you are moved, touched, informed, awed, shocked, pu
 
  <div id="polimedia" name="polimedia" class="block">
           
-          <h3><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates<b></h3>
+          <h3><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates - SHORTLISTED<b></h3>
 <p><h3><i> Martijn Kleppe, Max Kemman, Henri Beunders, Laura Hollink, Damir Juric, Johan Oomen
 and Jaap Blom</i></h3></p>
 
@@ -339,7 +339,7 @@ and Jaap Blom</i></h3></p>
 <div id="rethink" name="rethink" class="block">
 
  
-<h3><b>REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible<b></h3>
+<h3><b>REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible - SHORTLISTED<b></h3>
 <p><h3><i>Entrepreneur: Vaidas Repecka, Senior scientist and spokesperson on things: Dr. Rytis Maskeliunas, Linguist and content advisor: Dr. Laura Merfeldiene</i></h3></p>
 <p><h3>Vaidas Repecka is a director of UAB Informacijos tinklas (Founder company). The rest are young and popular academic professors: Dr. Rytis Maskeliunas from Kaunas university of technology, and Dr. Laura Merfeldiene from Vytautas Magnus university</h3></p>
 <ul><li>RE:THINK! All information is linked via topics maps, just like your mind does! Visualize the Moon related to The Earth as satellite, not as section in page 872 in your astronomy book!</li><li>
@@ -380,7 +380,7 @@ RE:DISCOVER! Find new information! Expand your knowledge! Use ReCredible! </li><
 
 
  <div id="weshare" name="weshare" class="block">
-<h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data<b></h3>
+<h3><b>We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data - SHORTLISTED<b></h3>
 <p><h3><i>Adolfo Ruiz-Calleja, Guillermo Vega-Gorgojo, Juan I. Asensio-Pérez, Eduardo Gómez-Sánchez, Miguel L. Bote-Lorenzo, Carlos Alario-Hoyos</i></h3></p>
 <p><h3>Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad de Valladolid, Universidad Carlos III de Madrid, Valladolid, Spain</h3></p>
 <p><h3>Several educational registries (e.g. Schoolforge or Ontoolsearch) provide information about ICT tools in order to help educators when discovering and -which limits their utility- is how their data is sustained, since educational descriptions of ICT tools are hard to create and maintain updated. In order to overcome this problem, some registries (e.g. Cool Tools For Schools) involve their communities of users in their sustainment, following a social approach. Unfortunately, three important drawbacks can be found in these registries: first, the well-known cold-start problem is present; second, their data models can not typically describe information about the educational use of ICT tools; third, these registries are isolated data silos that need to create and keep updated all the data they manage, thus increasing the overall effort of sustaining educational ICT tool datasets. For this reason we propose We-Share, a social annotation application that allows educators to search, create and enrich descriptions of ICT tools from the Web of Data. This characteristic enables We-Share to count with an initial dataset of 6760 ICT tool descriptions automatically gathered from the Web, which are automatically updated by periodically crawling the Web of Data. Further, We-Share enables the community of educators to enrich its dataset reviewing ICT tools and relating them to the educational contexts where they were employed. All the data published on We-Share is available as Linked Open Data.
@@ -406,7 +406,7 @@ Its SPARQL endpoint can be accessed at: <a href="http://seek.rkbexplorer.com/spa
 
 <div id="yourhistory" name="yourhistory" class="block">
 
- <h3><b>yourHistory: Personalising Historic Events<b></h3>
+ <h3><b>yourHistory: Personalising Historic Events - SHORTLISTED<b></h3>
 <p><h3><i>Maria-Hendrike Peetz, David Graus, Daan Odijk, Maarten de Rijke and  Ork de Rooij</i></h3></p>
 <p><h3>University of Amsterdam, Amsterdam, The Netherlands</h3></p>
 <p><h3>Students of history often study dates and events that have little to do with their own life. We make history tangible by showing historic events that are personal and based on a user's own interests (his or her Facebook profile). Often, those events are small-scale and escape history books. By linking personal historic events with global events, we aim to link a user's life with global history, in some way allow him to writing his own personal history book.</h3></p>
