--- a/veni.html
+++ b/veni.html
@@ -112,8 +112,8 @@
 <a href="#drhoo">Dr Hoo</a></li><li>
 <a href="#digitalplanet">Enrichment of Young Digital Planet's biology lessons</a></li><li>
 <a href="#favsyn">FavSync - Collect bookmarks together</a></li><li>
-<a href="#globetown">Globe-Town: open data for sustainable development education</a></li> <b>SHORTLISTED</b><li>
-<a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a></li> <b>SHORTLISTED</b><li>
+<a href="#globetown">Globe-Town: open data for sustainable development education</a> <b>SHORTLISTED</b></li><li>
+<a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a> <b>SHORTLISTED</b></li> <li>
 <a href="#learner">Learner Journey Navigation System</a></li><li>
 <a href="#mooccounselor">LinkedIn MOOCs counselor</a></li><li>
 <a href="#melod">MELOD: Mobile Environment for learning with Linked Open Data</a></li><li>
@@ -122,13 +122,13 @@
 <a href="#neurocloud">Neuro-Cloud Free Textbook Project</a></li><li>
 <a href="#open">Open LInked Education Data</a></li><li>
 <a href="#onemillion">One Million Museum Moments</a></li><li>
-<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a></li> <b>SHORTLISTED</b><li>
-<a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a></li> <b>SHORTLISTED</b><li>
+<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a> <b>SHORTLISTED</b></li> <li>
+<a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a> <b>SHORTLISTED</b></li><li>
 <a href="#socialvle">Social VLE With Rich Structure Learning Data Using Semantic CMS</a></li><li>
 <a href="#suggestme">Suggest me content for further reading and learning</a></li><li>
 <a href="#weshare">We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data</a></li> <b>SHORTLISTED</b><li>
 <a href="#wikipedia">WIkipedia data linker</a></li><li>
-<a href="#yourhistory">yourHistory: Personalising Historic Events</a></li> <b>SHORTLISTED</b></ul>
+<a href="#yourhistory">yourHistory: Personalising Historic Events</a> <b>SHORTLISTED</b></li></ul>
 
      </div><!-- .block -->      
           <div id="course" name="course" class="block">
