--- a/veni.html
+++ b/veni.html
@@ -117,7 +117,7 @@
 <a href="#learner">Learner Journey Navigation System</a></li><li>
 <a href="#mooccounselor">LinkedIn MOOCs counselor</a></li><li>
 <a href="#melod">MELOD: Mobile Environment for learning with Linked Open Data</a></li><li>
-<a href="#mismuseos">Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform</a></li> <b>SHORTLISTED</b><li>
+<a href="#mismuseos">Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform</a> <b>SHORTLISTED</b></li> <li>
 <a href="#moocrank">moocrank: recommendation of MOOCs based on learning outcomes</a></li><li>
 <a href="#neurocloud">Neuro-Cloud Free Textbook Project</a></li><li>
 <a href="#open">Open LInked Education Data</a></li><li>
