--- a/veni.html
+++ b/veni.html
@@ -108,11 +108,11 @@
           <h2>Abstracts</h2>
           
 <ul><li><a href="#course">Course Finder</a></li><li>
-<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED</b></li><li>
+<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED - 3rd PRIZE</b></li><li>
 <a href="#drhoo">Dr Hoo</a></li><li>
 <a href="#digitalplanet">Enrichment of Young Digital Planet's biology lessons</a></li><li>
 <a href="#favsyn">FavSync - Collect bookmarks together</a></li><li>
-<a href="#globetown">Globe-Town: open data for sustainable development education</a> <b>SHORTLISTED</b></li><li>
+<a href="#globetown">Globe-Town: open data for sustainable development education</a> <b>SHORTLISTED - 2nd PRIZE</b></li><li>
 <a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a> <b>SHORTLISTED</b></li> <li>
 <a href="#learner">Learner Journey Navigation System</a></li><li>
 <a href="#mooccounselor">LinkedIn MOOCs counselor</a></li><li>
@@ -122,7 +122,7 @@
 <a href="#neurocloud">Neuro-Cloud Free Textbook Project</a></li><li>
 <a href="#open">Open LInked Education Data</a></li><li>
 <a href="#onemillion">One Million Museum Moments</a></li><li>
-<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a> <b>SHORTLISTED</b></li> <li>
+<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a> <b>SHORTLISTED - 1st PRIZE</b></li> <li>
 <a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a> <b>SHORTLISTED</b></li><li>
 <a href="#socialvle">Social VLE With Rich Structure Learning Data Using Semantic CMS</a></li><li>
 <a href="#suggestme">Suggest me content for further reading and learning</a></li><li>
