--- a/veni.html
+++ b/veni.html
@@ -326,7 +326,7 @@ A Museum Moment happens when you are moved, touched, informed, awed, shocked, pu
 
  <div id="polimedia" name="polimedia" class="block">
           
-          <h3><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates - SHORTLISTED<b></h3>
+          <h3>><img src="images/trophy.png" height="200px" align="right" /><b>PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates - SHORTLISTED<b></h3>
 <p><h3><i> Martijn Kleppe, Max Kemman, Henri Beunders, Laura Hollink, Damir Juric, Johan Oomen
 and Jaap Blom</i></h3></p>
 
